--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ set(CMAKE_CUDA_STANDARD_REQUIRED ${CMAKE_CXX_STANDARD_REQUIRED})
 set(CMAKE_CUDA_EXTENSIONS ${CMAKE_CXX_EXTENSIONS})
 
 list(APPEND TEST_COMPILE_OPTIONS -Xptxas=-v)
+#list(APPEND TEST_COMPILE_OPTIONS -maxrregcount 128)
+list(APPEND TEST_COMPILE_OPTIONS -gencode arch=compute_86,code=sm_86)
 
 add_executable(test test.cu)
 target_compile_options(test PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:${TEST_COMPILE_OPTIONS}>)
